tests/snapshots/tui_snapshots__choose_preset_first_builtin_selected.snap
---
source: tests/tui_snapshots.rs
assertion_line: 112
expression: render_to_buffer(&app)
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "╭ Presets ─────────────────────────────────────────────────────────────────────╮",
        "│ Built-in                                                                     │",
        "│   ▶ minimal                                                                  │",
        "│     dev                                                                      │",
        "│     git-heavy                                                                │",
        "│     powerline-dracula                                                        │",
        "│     powerline-gruvbox                                                        │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "╰──────────────────────────────────────────────────────────────────────────────╯",
        "╭ Preview ─────────────────────────────────────────────────────────────────────╮",
        "│  ╭─────────────────────────────────────────────────────────────────────────╮ │",
        "│  │ > ctrl+s saves config                                                   │ │",
        "│  ╰─────────────────────────────────────────────────────────────────────────╯ │",
        "│                                                                              │",
        "│  /Users/igor/mp/startup/cchud | main | Sonnet 4.7                            │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "╰──────────────────────────────────────────────────────────────────────────────╯",
        "  Tab switch panel  ? help  ^S save  q quit                                     ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 15, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 26, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 77, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 18, fg: Indexed(5), bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 18, fg: Indexed(6), bg: Reset, underline: Reset, modifier: BOLD,
        x: 51, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 28, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 38, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 43, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
