tests/snapshots/tui_snapshots__confirm_install_modal_over_home.snap
---
source: tests/tui_snapshots.rs
expression: render_to_buffer(&app)
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "╭ cchud configurator ──────────────────────────────────────────────────────────╮",
        "│   Edit Lines                                                                 │",
        "│   Choose preset                                                              │",
        "│ ▶ Install to Claude Code                                                     │",
        "│   Exit                                                                       │",
        "│           ╭ Install to Claude Code ──────────────────────────────╮           │",
        "│           │ Install to Claude Code?                              │           │",
        "│           │                                                      │           │",
        "│           │ Will write cchud into ~/.claude/settings.json,       │           │",
        "│           │ overwriting any existing statusLine.                 │           │",
        "│           │                                                      │           │",
        "│           │ ▶ Overwrite                                          │           │",
        "│           │   Cancel                                             │           │",
        "│           │                                                      │           │",
        "│           │ ↑/↓ select  Enter confirm  Esc cancel                │           │",
        "│           │                                                      │           │",
        "│           │                                                      │           │",
        "│           ╰──────────────────────────────────────────────────────╯           │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "╰──────────────────────────────────────────────────────────────────────────────╯",
        "  Tab switch panel  ? help  ^S save  q quit                                     ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 26, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 5, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 37, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 8, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 8, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 11, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 11, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 11, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 15, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 15, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 16, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 16, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 17, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 28, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 38, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 43, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
